--- a/portfolio.html
+++ b/portfolio.html
@@ -1563,7 +1563,9 @@
                         <span class="location">📍 Clemson, SC</span>
                     </div>
                     <p>
-                        Selected to join a multidisciplinary AI research initiative, working on a dedicated project team to solve high-impact, real-world problems using artificial intelligence and machine learning.
+                        Develop advanced vision-based Large Language Model (LLM) pipelines to analyze TV commercial videos and extract structured insights from ad content.
+                        Implement automated techniques for celebrity recognition, demographic analysis, and detailed activity description within advertisement footage.
+                        Collaborate with a multidisciplinary research team to evaluate LLM performance and optimize models for real-world advertising datasets.
                     </p>
                 </div>
                 <div class="timeline-logo" style="left: 65%; top: 2.5rem; width: 70px;">
