Made TA Description present tense

--- a/portfolio.html
+++ b/portfolio.html
@@ -1586,9 +1586,9 @@
                         <span class="location">📍 Clemson, SC</span>
                     </div>
                     <p>
-                        Instructed a weekly lab section of 38 students in a Python programming course, providing guidance on coding fundamentals and debugging techniques.
-                        Facilitated 1-hour office hours twice weekly, assisting ~12 students per session with Python programming concepts, debugging, and assignment guidance.
-                        Reviewed and provided feedback on 15–21 programming assignments per week, ensuring timely evaluation and helping students improve code quality and problem-solving skills.
+                        Instruct a weekly lab section of 38 students in a Python programming course, providing guidance on coding fundamentals and debugging techniques.
+                        Facilitate 1-hour office hours twice weekly, assisting ~12 students per session with Python programming concepts, debugging, and assignment guidance.
+                        Review and provide feedback on 15–21 programming assignments per week, ensuring timely evaluation and helping students improve code quality and problem-solving skills.
                     </p>
                 </div>
             </div>
