Name & Title Adjustment 1

--- a/index.html
+++ b/index.html
@@ -1499,12 +1499,13 @@
             <!-- Left: Name, Title, and Cube (cube behind title only) -->
             <div style="flex: 1; min-width: 320px; position: relative; display: flex; flex-direction: column; align-items: flex-start; justify-content: center; height: 500px; max-width: 600px;">
                 <!-- Name (single line) -->
-                <div style="position: relative; z-index: 2; margin-left: 2.5rem; margin-top: -5rem;">
-                    <!-- ↑ Change 'margin-top' here to move name/title up or down -->
+                <div style="position: relative; z-index: 2; margin-left: 1rem; margin-top: -5rem;">
+                    <!-- ↑ Change 'margin-left' here to move the NAME left/right -->
                     <div class="glitch" data-text="Harshal Patel" style="font-size: 4rem; text-align: left; margin-bottom: 1.2rem; white-space: nowrap;">Harshal Patel</div>
                 </div>
                 <!-- Title with cube behind -->
-                <div style="position: relative; z-index: 2; margin-left: 2.5rem;">
+                <div style="position: relative; z-index: 2; margin-left: 1rem;">
+                    <!-- ↑ Change 'margin-left' here to move the TITLE and TYPING ANIMATION left/right -->
                     <!-- Cube behind title, slightly to the right and moved down -->
                     <div style="position: absolute; left: 120px; top: 225%; transform: translateY(-50%); z-index: 1; opacity: 0.35; pointer-events: none;">
                         <div class="cube-container" style="width: 350px; height: 350px; perspective: 1200px;">
