Attempted to make it more mobile-friendly

--- a/index.html
+++ b/index.html
@@ -1332,6 +1332,31 @@
             }
         }
 
+        /* Mobile responsive font sizes for hero section */
+        @media (max-width: 768px) {
+            .glitch {
+                font-size: 2.5rem !important;
+            }
+            .hero-title {
+                font-size: 1.3rem !important;
+            }
+            #typing-animation {
+                font-size: 1.3rem !important;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .glitch {
+                font-size: 2rem !important;
+            }
+            .hero-title {
+                font-size: 1.1rem !important;
+            }
+            #typing-animation {
+                font-size: 1.1rem !important;
+            }
+        }
+
         /* Headshot */
         @media (max-width: 600px) {
             .hero-content > div:last-child > div {
@@ -1501,7 +1526,7 @@
                 <!-- Name (single line) -->
                 <div style="position: relative; z-index: 2; margin-left: 0rem; margin-top: -5rem;">
                     <!-- ↑ Change 'margin-left' here to move the NAME left/right -->
-                    <div class="glitch" data-text="Harshal Patel" style="font-size: 4rem; text-align: left; margin-bottom: 1.2rem; white-space: nowrap;">Harshal Patel</div>
+                    <div class="glitch" data-text="Harshal Patel" style="font-size: 4rem; text-align: left; margin-bottom: 1.2rem;">Harshal Patel</div>
                 </div>
                 <!-- Title with cube behind -->
                 <div style="position: relative; z-index: 2; margin-left: 0rem;">
