--- a/index.html
+++ b/index.html
@@ -1567,7 +1567,7 @@
             <div class="glass-card" style="grid-column: 1 / -1;">
                 <div class="card-icon">Hi, I'm Harshal👋</div>
                 <p style="font-size: 1.3rem;">
-                    I am a first-generation student at Clemson University from Union, SC. I am majoring in Computer Science with minors in Artificial Intelligence and Cybersecurity. When I’m not coding, you can usually find me on the basketball court, going for a run, watching anime, gambling, or playing video games.
+                    I am a first-generation student at Clemson University from Union, SC. I am majoring in Computer Science with minors in Artificial Intelligence and Cybersecurity. When I’m not coding, you can usually find me on the basketball court, going for a run, watching anime, or playing video games.
                     I am currently an AI Research Assistant for the Watt AI Program and an undergraduate teaching assistant for a Python course at Clemson University.
                 </p>
             </div>
