Commented out Motel Receptionist

--- a/index.html
+++ b/index.html
@@ -1568,7 +1568,7 @@
                 <div class="card-icon">Hi, I'm Harshal👋</div>
                 <p style="font-size: 1.3rem;">
                     I am a first-generation student at Clemson University from Union, SC. I am majoring in Computer Science with minors in Artificial Intelligence and Cybersecurity. When I’m not coding, you can usually find me on the basketball court, going for a run, watching anime, or playing video games.
-                    I am currently an AI Research Assistant for the Watt AI Program and an undergraduate teaching assistant for a Python course at Clemson University.
+                    I am currently an AI Research Assistant for the Watt AI Program and an undergraduate teaching assistant for a Python programming course at Clemson University.
                 </p>
             </div>
         </div>
@@ -1638,7 +1638,7 @@
                     <img src="clemson-logo.png" alt="Clemson Tigers Logo" style="width: 300px; height: auto;">
                 </div>
             </div>
-            <!-- Motel Receptionist: logo on the right -->
+            <!-- Motel Receptionist: logo on the right 
             <div class="timeline-item">
                 <div class="timeline-dot"></div>
                 <div class="timeline-content">
@@ -1657,7 +1657,7 @@
                 <div class="timeline-logo" style="left: 18%; top: 2.5rem; width: 70px;">
                     <img src="clemson-logo.png" alt="Clemson Tigers Logo" style="width: 300px; height: auto;">
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
 
