Updated AI Research Bullet Points & Tech Stack

--- a/index.html
+++ b/index.html
@@ -1589,9 +1589,9 @@
                         <span class="location">📍 Clemson, SC</span>
                     </div>
                     <p>
-                        Develop advanced vision-based Large Language Model (LLM) pipelines to analyze TV commercial videos and extract structured insights from ad content.
+                        Develop advanced vision-based Large Language Model (LLM) pipelines using pretrained Hugging Face models in PyTorch to analyze TV commercial videos and extract structured insights from ad content.
                         Implement automated techniques for celebrity recognition, demographic analysis, and detailed activity description within advertisement footage.
-                        Collaborate with a multidisciplinary research team to evaluate LLM performance and optimize models for real-world advertising datasets.
+                        Utilize Jupyter Notebooks and Clemson’s high-performance computing (HPC) cluster to efficiently train, evaluate, and optimize large-scale models on advertisement footage.
                     </p>
                 </div>
                 <div class="timeline-logo" style="left: 65%; top: 2.5rem; width: 70px;">
@@ -1734,6 +1734,7 @@
                     <div class="hexagon"><span>React.js</span></div>
                     <div class="hexagon"><span>React Native</span></div>
                     <div class="hexagon"><span>SQLAlchemy</span></div>
+                    <div class="hexagon"><span>PyTorch</span></div>
                     <div class="hexagon"><span>NumPy</span></div>
                     <div class="hexagon"><span>Pandas</span></div>
                     <div class="hexagon"><span>Matplotlib</span></div>
@@ -1742,10 +1743,11 @@
             </div>
             <!-- Developer Tools -->
             <div class="tech-stack-group">
-                <div class="tech-stack-heading">Developer Tools</div>
+                <div class="tech-stack-heading">Tools & Platforms</div>
                 <div class="hexagon-grid">
                     <div class="hexagon"><span>Git</span></div>
                     <div class="hexagon"><span>VS Code</span></div>
+                    <div class="hexagon"><span>Jupyter</span></div>
                     <div class="hexagon"><span>GitHub Copilot</span></div>
                     <div class="hexagon"><span>Linux</span></div>
                     <div class="hexagon"><span>Vim</span></div>
