Updated Project Description and updated TypingPhrases

--- a/index.html
+++ b/index.html
@@ -2438,7 +2438,6 @@
                 <div class="project-body">
                     <div class="project-description">
                         Developed a GUI-based parking management system using Python and Tkinter for Clemson University parking lots C1 and C2, allowing real-time space visualization and manual check-in/out.
-                        Designed user authentication system with login and account creation features.
                         Collaborated in a 4-person team during a 12-hour freshman-only hackathon, winning the Best Hack for Good award.
                     </div>
                     <div class="tech-stack">
@@ -2875,12 +2874,14 @@
 
         // Typing animation
         const typingPhrases = [
+            "Clemson Tiger",
             "First-Generation Student",
-            "Full-Stack Developer", 
-            "AI Enthusiast",
+            "Full-Stack Developer",
+            "AI Researcher",
             "Teaching Assistant",
-            "One Piece Enthusiast",
-            "Clemson Tiger"
+            "CodePath Scholar",
+            "2x Hackathon Winner",
+            "One Piece Enthusiast"
         ];
         const typingElement = document.getElementById('typing-animation');
         let typingIndex = 0, charIndex = 0, isDeleting = false;
