Reverted Project Description

--- a/index.html
+++ b/index.html
@@ -2422,6 +2422,7 @@
                 <div class="project-body">
                     <div class="project-description">
                         Developed a GUI-based parking management system using Python and Tkinter for Clemson University parking lots C1 and C2, allowing real-time space visualization and manual check-in/out.
+                        Designed user authentication system with login and account creation features.
                         Collaborated in a 4-person team during a 12-hour freshman-only hackathon, winning the Best Hack for Good award.
                     </div>
                     <div class="tech-stack">
