Added AirAware Project, Updated Tech Stack, Removed Disco Mode Pop-up

--- a/index.html
+++ b/index.html
@@ -1471,7 +1471,7 @@
 
         .matrix-column {
             position: absolute;
-            color: #00ff00;
+            color: #00ff00; /* 00ff00 */
             font-family: 'Courier New', monospace;
             font-size: 14px;
             white-space: pre;
@@ -2298,7 +2298,7 @@
                     <p>
                         Develop advanced vision-based Large Language Model (LLM) pipelines using pretrained Hugging Face models in PyTorch to analyze TV commercial videos and extract structured insights from ad content.
                         Implement automated techniques for celebrity recognition, demographic analysis, and detailed activity description within advertisement footage.
-                        Utilize Jupyter Notebooks and Clemson’s high-performance computing (HPC) cluster to efficiently train, evaluate, and optimize large-scale models on advertisement footage.
+                        Utilize Jupyter Notebooks and Linux high-performance computing (HPC) cluster to efficiently train, evaluate, and optimize large-scale models on advertisement footage
                     </p>
                 </div>
                 <div class="timeline-logo" style="left: 65%; top: 2.5rem; width: 70px;">
@@ -2372,6 +2372,37 @@
     <section id="projects">
         <div class="section-title">Projects</div>
         <div class="projects-grid">
+            <div class="project-card">
+                <div class="project-header">
+                    <h3>AirAware</h3>
+                    <div class="project-links">
+                        <!-- GitHub link to be added -->
+                    </div>
+                </div>
+                <div class="project-body">
+                    <div class="project-description">
+                        Developed a full-stack web app integrating OpenAQ, NASA FIRMS, and OpenWeather APIs to visualize real-time air quality and wildfire data from 100+ countries using an interactive React + Leaflet.js map. Built a Flask RESTful API backend with multi-source aggregation, EPA-based AQI conversion, and 3-hour caching that reduced API calls by 80% while maintaining 99% uptime for reliable global monitoring.
+                    </div>
+                    <div class="tech-stack">
+                        <span class="tech-badge">Python</span>
+                        <span class="tech-badge">JavaScript</span>
+                        <span class="tech-badge">Flask</span>
+                        <span class="tech-badge">React</span>
+                        <span class="tech-badge">Leaflet.js</span>
+                    </div>
+                    <div class="project-stats">
+                        <div class="stat-item">
+                            🥈 <span>2nd Place</span>
+                        </div>
+                        <div class="stat-item">
+                            ⏱️ <span>48-hour build</span>
+                        </div>
+                        <div class="stat-item">
+                            🚀 <span>NASA Space Apps Challenge</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="project-card">
                 <div class="project-header">
                     <h3>GoHelpMe</h3>
@@ -2454,47 +2485,23 @@
             <div class="tech-stack-group">
                 <div class="tech-stack-heading">Languages</div>
                 <div class="hexagon-grid">
-                    <div class="hexagon" data-level="expert">
+                    <div class="hexagon">
                         <span>Python</span>
-                        <div class="skill-tooltip">
-                            <span class="skill-level">Expert</span>
-                            <span class="skill-years">3+ years experience</span>
-                        </div>
                     </div>
-                    <div class="hexagon" data-level="advanced">
+                    <div class="hexagon">
                         <span>C/C++</span>
-                        <div class="skill-tooltip">
-                            <span class="skill-level">Advanced</span>
-                            <span class="skill-years">2+ years experience</span>
-                        </div>
                     </div>
-                    <div class="hexagon" data-level="advanced">
+                    <div class="hexagon">
                         <span>SQL</span>
-                        <div class="skill-tooltip">
-                            <span class="skill-level">Advanced</span>
-                            <span class="skill-years">2+ years experience</span>
-                        </div>
                     </div>
-                    <div class="hexagon" data-level="intermediate">
+                    <div class="hexagon">
                         <span>JavaScript</span>
-                        <div class="skill-tooltip">
-                            <span class="skill-level">Intermediate</span>
-                            <span class="skill-years">1.5+ years experience</span>
-                        </div>
                     </div>
-                    <div class="hexagon" data-level="intermediate">
+                    <div class="hexagon">
                         <span>TypeScript</span>
-                        <div class="skill-tooltip">
-                            <span class="skill-level">Intermediate</span>
-                            <span class="skill-years">1+ years experience</span>
-                        </div>
                     </div>
-                    <div class="hexagon" data-level="advanced">
+                    <div class="hexagon">
                         <span>HTML/CSS</span>
-                        <div class="skill-tooltip">
-                            <span class="skill-level">Advanced</span>
-                            <span class="skill-years">2+ years experience</span>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -2502,75 +2509,35 @@
             <div class="tech-stack-group">
                 <div class="tech-stack-heading">Frameworks & Libraries</div>
                 <div class="hexagon-grid">
-                    <div class="hexagon" data-level="advanced">
+                    <div class="hexagon">
                         <span>Flask</span>
-                        <div class="skill-tooltip">
-                            <span class="skill-level">Advanced</span>
-                            <span class="skill-years">Web development projects</span>
-                        </div>
                     </div>
-                    <div class="hexagon" data-level="intermediate">
+                    <div class="hexagon">
                         <span>Node.js</span>
-                        <div class="skill-tooltip">
-                            <span class="skill-level">Intermediate</span>
-                            <span class="skill-years">Backend development</span>
-                        </div>
                     </div>
-                    <div class="hexagon" data-level="intermediate">
+                    <div class="hexagon">
                         <span>React.js</span>
-                        <div class="skill-tooltip">
-                            <span class="skill-level">Intermediate</span>
-                            <span class="skill-years">Frontend projects</span>
-                        </div>
                     </div>
-                    <div class="hexagon" data-level="intermediate">
+                    <div class="hexagon">
                         <span>React Native</span>
-                        <div class="skill-tooltip">
-                            <span class="skill-level">Intermediate</span>
-                            <span class="skill-years">Mobile app development</span>
-                        </div>
                     </div>
-                    <div class="hexagon" data-level="advanced">
-                        <span>SQLAlchemy</span>
-                        <div class="skill-tooltip">
-                            <span class="skill-level">Advanced</span>
-                            <span class="skill-years">Database projects</span>
-                        </div>
-                    </div>
-                    <div class="hexagon" data-level="expert">
+                    <div class="hexagon">
                         <span>PyTorch</span>
-                        <div class="skill-tooltip">
-                            <span class="skill-level">Expert</span>
-                            <span class="skill-years">AI research work</span>
-                        </div>
                     </div>
-                    <div class="hexagon" data-level="expert">
+                    <div class="hexagon">
                         <span>NumPy</span>
-                        <div class="skill-tooltip">
-                            <span class="skill-level">Expert</span>
-                            <span class="skill-years">Data science projects</span>
-                        </div>
                     </div>
-                    <div class="hexagon" data-level="expert">
+                    <div class="hexagon">
                         <span>Pandas</span>
-                        <div class="skill-tooltip">
-                            <span class="skill-level">Expert</span>
-                            <span class="skill-years">Data analysis work</span>
-                        </div>
                     </div>
-                    <div class="hexagon" data-level="advanced">
-                        <span>Matplotlib</span>
-                        <div class="skill-tooltip">
-                            <span class="skill-level">Advanced</span>
-                            <span class="skill-years">Data visualization</span>
-                        </div>
+                    <div class="hexagon">
+                        <span>SQLAlchemy</span>
                     </div>
-                    <div class="hexagon" data-level="intermediate">
-                        <span>Tkinter</span>
-                        <div class="skill-tooltip">
-                            <span class="skill-level">Intermediate</span>
-                            <span class="skill-years">GUI applications</span>
-                        </div>
+                    <div class="hexagon">
+                        <span>Leaflet.js</span>
+                    </div>
+                    <div class="hexagon">
+                        <span>MatPlotLib</span>
                     </div>
                 </div>
             </div>
@@ -2578,61 +2545,35 @@
             <div class="tech-stack-group">
                 <div class="tech-stack-heading">Tools & Platforms</div>
                 <div class="hexagon-grid">
-                    <div class="hexagon" data-level="expert">
+                    <div class="hexagon">
                         <span>Git</span>
-                        <div class="skill-tooltip">
-                            <span class="skill-level">Expert</span>
-                            <span class="skill-years">Version control mastery</span>
-                        </div>
                     </div>
-                    <div class="hexagon" data-level="expert">
-                        <span>VS Code</span>
-                        <div class="skill-tooltip">
-                            <span class="skill-level">Expert</span>
-                            <span class="skill-years">Daily development</span>
-                        </div>
+                    <div class="hexagon">
+                        <span>PostgreSQL</span>
                     </div>
-                    <div class="hexagon" data-level="expert">
-                        <span>Jupyter</span>
-                        <div class="skill-tooltip">
-                            <span class="skill-level">Expert</span>
-                            <span class="skill-years">Research & analysis</span>
-                        </div>
+                    <div class="hexagon">
+                        <span>Firebase</span>
                     </div>
-                    <div class="hexagon" data-level="advanced">
-                        <span>GitHub Copilot</span>
-                        <div class="skill-tooltip">
-                            <span class="skill-level">Advanced</span>
-                            <span class="skill-years">AI-assisted coding</span>
-                        </div>
-                    </div>
-                    <div class="hexagon" data-level="advanced">
-                        <span>Linux</span>
-                        <div class="skill-tooltip">
-                            <span class="skill-level">Advanced</span>
-                            <span class="skill-years">System administration</span>
-                        </div>
-                    </div>
-                    <div class="hexagon" data-level="intermediate">
-                        <span>Vim</span>
-                        <div class="skill-tooltip">
-                            <span class="skill-level">Intermediate</span>
-                            <span class="skill-years">Text editing</span>
-                        </div>
-                    </div>
-                    <div class="hexagon" data-level="intermediate">
-                        <span>Expo</span>
-                        <div class="skill-tooltip">
-                            <span class="skill-level">Intermediate</span>
-                            <span class="skill-years">Mobile development</span>
-                        </div>
-                    </div>
-                    <div class="hexagon" data-level="intermediate">
+                    <div class="hexagon">
                         <span>Vercel</span>
-                        <div class="skill-tooltip">
-                            <span class="skill-level">Intermediate</span>
-                            <span class="skill-years">Deployment platform</span>
-                        </div>
+                    </div>
+                    <div class="hexagon">
+                        <span>RESTful APIs</span>
+                    </div>
+                    <div class="hexagon">
+                        <span>VS Code</span>
+                    </div>
+                    <div class="hexagon">
+                        <span>Jupyter</span>
+                    </div>
+                    <div class="hexagon">
+                        <span>Linux</span>
+                    </div>
+                    <div class="hexagon">
+                        <span>Vim</span>
+                    </div>
+                    <div class="hexagon">
+                        <span>Expo</span>
                     </div>
                 </div>
             </div>
@@ -3010,15 +2951,7 @@
                 // Press 'D' for disco mode
                 if (e.key.toLowerCase() === 'd' && e.ctrlKey) {
                     e.preventDefault();
-                    const wasPartyMode = document.body.classList.contains('party-mode');
                     document.body.classList.toggle('party-mode');
-                    
-                    if (wasPartyMode) {
-                        // Disco mode was turned off
-                        showSecretMessage('🕺 DISCO MODE ENDED! 🕺');
-                    } else {
-                        // Disco mode was turned on - don't show message yet
-                    }
                 }
                 
                 // Press 'M' for matrix
@@ -3037,7 +2970,7 @@
         });
 
         // Portfolio loaded successfully
-        console.log('🎉 Harshal Patel Portfolio loaded successfully!');
+        console.log('🎉 Portfolio loaded successfully!');
         console.log('🎮 Try the Konami code: ↑↑↓↓←→←→BA');
         console.log('🔥 Press Ctrl+D for disco mode or Ctrl+M for Matrix Rain!');
     </script>
